# my-dashboard

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.md
dev-ledger/: 2026-07-09.jsonl  2026-07-12.jsonl
src/mydashboard/: __init__.py  cli.py  dashboard.css  dashboard.py  fleet.py  render.py  shelves.py  shelves.toml
tests/: conftest.py  test_cli.py  test_dashboard.py  test_fleet.py  test_render.py  test_shelves.py
